--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,12 +7,13 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="18" />
+    
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+<uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
     <application
         android:allowBackup="true"
-        android:theme="@style/AppTheme"
-        
-       >
+        android:theme="@style/AppTheme" >
         <activity
             android:name="com.example.sesp.MainActivity"
             android:label="@string/app_name" >
@@ -21,6 +22,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.example.sesp.WikiActivity"
+            android:label="@string/title_activity_wiki" >
         </activity>
     </application>
 
