--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -15,7 +15,8 @@
 
     <application
         android:allowBackup="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" 
+        android:icon="@drawable/tracf">
         <activity
             android:name="com.example.sesp.MainActivity"
             android:label="@string/app_name" >
